# bmk

./: .env.example  .gitignore  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  Makefile  README.md  SECURITY.md  mk.ps1  mk_bld.sh  mk_bump_major.sh  mk_bump_minor.sh  mk_bump_patch.sh  mk_clean.sh  mk_commit.sh  mk_cov.sh  mk_deps.sh  mk_depsu.sh  mk_push.sh  mk_rel.sh  mk_release.sh  mk_run.sh  mk_test.sh  mk_testi.sh  mkcommit.sh  mktest.sh  mktesti.sh  pyproject.toml  reset_git_history.sh
.devcontainer/: devcontainer.json  settings.json
.github/workflows/: default_cicd_public.yml
docs/: concept.md
docs/adr/: 0001-memory-adapters-in-src.md
docs/systemdesign/: module_reference.md
notebooks/: Quickstart.ipynb
scripts/: _metadata.py  _pip.py  _test_steps.py  cli.py  dev.py  menu.py  push.py
src/bmk/: __init__.py  __init__conf__.py  __main__.py
src/bmk/adapters/cli/: __init__.py  constants.py  context.py  main.py  root.py  typed_click.py
src/bmk/adapters/cli/commands/: __init__.py  _prerequisites.py  _shared.py  build_cmd.py  bump_cmd.py  clean_cmd.py  commit_cmd.py  config.py  cov_cmd.py  custom_cmd.py  dependencies_cmd.py  info.py  install_cmd.py  push_cmd.py  release_cmd.py  run_cmd.py  ship_cmd.py  test_cmd.py  test_integration_cmd.py  testsuite_cmd.py
src/bmk/adapters/cli/commands/email/: _common.py
src/bmk/adapters/config/: defaultconfig.toml  deploy.py  display.py  loader.py  permissions.py
src/bmk/adapters/config/defaultconfig.d/: 10-bmk.toml  40-layered-config.toml  50-mail.toml  90-logging.toml
src/bmk/adapters/email/: transport.py  validation.py
src/bmk/adapters/logging/: setup.py
src/bmk/adapters/memory/: __init__.py  config.py  email.py
src/bmk/application/: ports.py
src/bmk/domain/: __init__.py  errors.py
src/bmk/makefile/: Makefile
src/bmk/makescripts/: _btx_stagerunner.ps1  _btx_stagerunner.sh  _bump_lib.ps1  _bump_lib.sh  _bump_version.py  _clean.py  _coverage.py  _dependencies.py  _derive_package_name.py  _extract_pip_audit_ignores.py  _loader.py  _psscriptanalyzer.py  _release.py  _resolve_python.ps1  _resolve_python.sh  _run.py  _shellcheck.py  _sync_initconf.py  _toml_config.py  bld_010_clean.ps1  bld_010_clean.sh  bld_020_build.ps1  bld_020_build.sh  btx_stagerunner.ps1  btx_stagerunner.sh  bump_major_010_bump.ps1  bump_major_010_bump.sh  bump_major_020_sync_initconf.ps1  bump_major_020_sync_initconf.sh  bump_minor_010_bump.ps1  bump_minor_010_bump.sh  bump_minor_020_sync_initconf.ps1  bump_minor_020_sync_initconf.sh  bump_patch_010_bump.ps1  bump_patch_010_bump.sh  bump_patch_020_sync_initconf.ps1  bump_patch_020_sync_initconf.sh  clean_010_clean.ps1  clean_010_clean.sh  commit_005_sync_initconf.ps1  (+73 more)
tests/: conftest.py  test_behaviors.py  test_bump_version.py  test_cache_effectiveness.py  test_cli_build_cmd.py  test_cli_bump_cmd.py  test_cli_clean_cmd.py  test_cli_commit_cmd.py  test_cli_config.py  test_cli_core.py  test_cli_cov_cmd.py  test_cli_custom_cmd.py  test_cli_dependencies_cmd.py  test_cli_email.py  test_cli_entry_and_context.py  test_cli_exit_codes.py  test_cli_install_cmd.py  test_cli_makefile_version_check.py  test_cli_overrides.py  test_cli_prerequisites.py  test_cli_push_cmd.py  test_cli_release_cmd.py  test_cli_run_cmd.py  test_cli_test_cmd.py  test_cli_test_cmd_config_propagation.py  test_cli_test_integration_cmd.py  test_cli_validation.py  test_config_overrides.py  test_deploy_permissions.py  test_display.py  test_email_config_model.py  test_enums.py  test_errors.py  test_logging.py  test_mail.py  test_makescripts.py  test_makescripts_clean.py  test_makescripts_coverage.py  test_makescripts_dependencies.py  test_makescripts_ps1.py  (+11 more)
