[project]
name = "bmk"
version = "2.9.0"
description = "Bitranox Make CLI - orchestrates build, test, clean, and custom staged scripts with layered configuration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.7",
    "lib_cli_exit_tools>=2.3.0",
    "lib_log_rich>=6.3.3",
    "lib_layered_config>=5.5.0",
    "btx_lib_mail>=1.3.1",
    "pydantic>=2.12.5",
    "orjson>=3.11.7",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.151.9",
    "ruff>=0.15.4",
    "pyright[nodejs]>=1.1.408",
    "bandit>=1.9.4",
    "build>=1.4.0",
    "twine>=6.2.0",
    "codecov-cli>=11.2.6",
    "pip-audit>=2.10.0",
    "textual>=8.0.0",
    "import-linter>=2.10",
    "shellcheck-py>=0.11.0.1",
    "shfmt-py>=3.12.0.2",
    "bashate>=2.1.1",
    "rtoml>=0.13.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "hatchling>=1.29.0",           # needed for bild system - additionally added here by design
    # Transitive CVE pins (genuine transitive deps needing minimum version)
    "jaraco-context>=6.1.0",       # CVE-2026-23949  (twine -> keyring -> jaraco.context)
    "urllib3>=2.6.3",              # CVE-2025-66471, CVE-2025-66418, CVE-2026-21441  (twine, codecov-cli, pip-audit)
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["cli", "make", "build", "test", "clean", "stagerunner", "custom-commands", "automation", "instrumentation", "script", "task-runner", "devops"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/bmk"
Repository = "https://github.com/bitranox/bmk.git"
Issues = "https://github.com/bitranox/bmk/issues"

[project.scripts]
bmk = "bmk.entry:main"
mk = "bmk.entry:main"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/bmk"]
include = [
    "src/bmk/py.typed",
    "src/bmk/adapters/config/defaultconfig.toml",
    "src/bmk/adapters/config/defaultconfig.d/*.toml",
    "src/bmk/makefile/Makefile",
    "src/bmk/makescripts/*.sh",
    "src/bmk/makescripts/*.ps1",
    "src/bmk/makescripts/*.py",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "N",           # pep8-naming
  "UP",          # pyupgrade
  "B",           # bugbear
  "A",           # builtins shadowing
  "C4",          # comprehension simplification
  "SIM",         # simplification
  "TCH",         # type-checking imports
  "RUF",         # ruff-specific
  "G",           # logging format (catches f-string in logger)
  "T20",         # print statements
  "PTH",         # pathlib preference
  "PLC", "PLE",  # pylint conventions/errors
  "S",           # flake8-bandit security checks
  "PERF",        # performance anti-patterns
  "ERA",         # eradicate dead/commented-out code
  "FBT",         # boolean trap (boolean positional args)
  "PLR",         # pylint refactor
  "PLW",         # pylint warnings
]
ignore = [
  "RUF002",    # ambiguous unicode characters in docstrings (en-dash) - typography choice
  "RUF022",    # unsorted __all__ - kept in logical grouping order
  "PLC0415",   # deferred imports inside functions - circular import prevention
  "TC001",     # stdlib imports at runtime - needed, not just for type hints
  "TC002",     # third-party imports at runtime - needed, not just for type hints
  "TC003",     # stdlib imports - same as TC001
  "TC006",     # cast() type expressions - existing code uses unquoted
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Notebooks: unused imports are often intentional for side effects
"notebooks/*.ipynb" = ["F401"]
# Makescripts: standalone CLI utilities with subprocess calls, print output, and magic values
"src/bmk/makescripts/*.py" = ["T20", "S101", "S603", "S607", "E501", "PLR0912", "PLR0913", "PLR2004"]
# Tests: assert is standard, test fixtures have passwords, magic values are clearer inline, temp paths are fine
"tests/*.py" = ["T20", "S101", "S105", "S106", "S108", "S603", "S607", "E501", "ERA001", "FBT001", "FBT003", "PLR0913", "PLR2004", "PLW1510"]
# CLI: Click framework injects boolean params; commands have many options
"src/bmk/adapters/cli/**/*.py" = ["FBT001", "FBT002", "PLR0913"]
# Protocols/adapters: many-param signatures by design
"src/bmk/application/*.py" = ["PLR0913"]
"src/bmk/adapters/config/*.py" = ["PLR0913"]
"src/bmk/adapters/email/*.py" = ["PLR0913"]
"src/bmk/adapters/memory/*.py" = ["PLR0913"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
# Exclude makescripts - standalone CLI utilities using dynamic imports
exclude = [
  "src/bmk/makescripts",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "local_only: tests that require the local dev environment (external resources, script composition); skipped in CI",
  "integration: tests requiring external resources (SMTP, databases, APIs); run via 'bmk ti' or 'mktesti.sh'",
]

[tool.coverage.run]
branch = true
parallel = false
# Use a temp directory for the coverage database to avoid SQLite locking
# issues on network-mounted filesystems. The {envtmpdir} placeholder is
# not supported by coverage.py, so we use an environment variable with
# fallback to a cross-platform temp location via the pytest_configure
# hook in tests/conftest.py. CI also sets COVERAGE_FILE via workflow env.
#
# For local development, the pytest hook automatically redirects to
# tempfile.gettempdir() before pytest-cov creates its Coverage() object.
# This static fallback catches edge cases where coverage is run directly.
data_file = "/tmp/.coverage.bmk"
source = ["src/bmk"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 80
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
  ".venv",
  ".data_arch_violations.json",
]

[tool.psscriptanalyzer]
# PSScriptAnalyzer rules to exclude when linting .ps1 files
exclude-rules = [
  "PSAvoidUsingWriteHost",              # intentional: stagerunner colored console UI
  "PSUseBOMForUnicodeEncodedFile",      # BOM-less UTF-8 is the modern standard
  "PSUseUsingScopeModifierInNewRunspaces",  # false positive: param() + -ArgumentList in Start-Job
]

[tool.bashate]
# bashate style settings for .sh files (E003 excluded: indent handled by shfmt)
max-line-length = 120
ignores = ["E003"]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for CICD test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"

[tool.importlinter]
root_package = "bmk"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Domain is pure (no adapter dependencies)"
type = "forbidden"
source_modules = [
  "bmk.domain",
]
forbidden_modules = [
  "bmk.adapters",
  "bmk.composition",
]

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
  # Composition wires adapters - can import everything
  "bmk.composition",
  # Adapters implement ports - can import application and domain
  "bmk.adapters",
  # Application defines ports - can import domain
  "bmk.application",
  # Domain is pure - bottom layer
  "bmk.domain",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (environment-level packages, not project dependencies)
ignore-vulns = [
  "CVE-2026-1703",     # pip wheel path traversal — excluded per user request
  "CVE-2025-8869",     # pip — environment-level package, not a project dependency
  "PYSEC-2022-42969",  # py — legacy test dependency, not used at runtime
  "PYSEC-2022-43012",  # setuptools 65.5.0 — build-time only, not a runtime dependency
  "PYSEC-2025-49",     # setuptools 65.5.0 — build-time only, not a runtime dependency
  "CVE-2024-6345",     # setuptools 65.5.0 — build-time only, not a runtime dependency
  "PYSEC-2024-44",     # rpyc 5.3.1 — environment-level package, not a project dependency
  "CVE-2026-24049",    # wheel 0.45.1 — environment-level package, not a project dependency
  "CVE-2026-26007",    # cryptography 46.0.3 — environment-level package, not a project dependency
  "CVE-2026-25990",    # pillow 12.0.0 — environment-level package, not a project dependency
]

[tool.bandit]
# Skip warnings for subprocess usage in _shared.py and commit_cmd.py — these modules
# intentionally execute external scripts (test runners, git) as part of core functionality.
skips = [
  "B404",  # Consider possible security implications associated with subprocess module
  "B603",  # subprocess call - check for execution of untrusted input
  "B607",  # Starting a process with a partial executable path (git, shell scripts)
]
